<resources>
    <string name="app_name">MusicPlayer</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="save">Save</string>
    <string name="back">back</string>
    <string name="choose_a_photo">Choose a photo:</string>
    <string name="enter_song_link">Enter item Link</string>
    <string name="enter_song_name">Enter item name</string>
    <string name="yes">Yes</string>
    <string name="remove_song_confirmation">Remove item Confirmation</string>
    <string name="r_u_sure">Are you sure you want to remove this item?</string>
    <string name="no">No</string>
    <string name="now_playing">Now Playing:\n</string>
    <string name="song_name">Item name:</string>
    <string name="song_link">Item link:</string>
</resources>