<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddSongActivity"
    android:background="@drawable/background1"
    >
    <!--    android:background="@drawable/background"-->

    <EditText
        android:id="@+id/songName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:hint="@string/enter_song_name"
        android:text=""
        android:textAlignment="center"
        android:textColor="@android:color/background_dark" />

    <EditText
        android:id="@+id/songlink"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/songName"
        android:layout_marginTop="15dp"
        android:hint="@string/enter_song_link"
        android:text=""
        android:textAlignment="center"
        android:textColor="@android:color/background_dark"
        android:layout_marginBottom="10dp"
/>

    <TextView
        android:id="@+id/txt1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/songlink"
        android:text="@string/choose_a_photo"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"

        />

<!--    <TextView-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_below="@+id/txt1"-->
<!--        android:text="choose a photo from 'Device Folders/Pictures' not recent images"-->
<!--        android:textAlignment="center"-->
<!--        android:textStyle="bold"-->

<!--        />-->
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:weightSum="5"
        android:layout_marginTop="0dp"
        android:layout_below="@+id/txt1"
        android:orientation="horizontal"
        android:id="@+id/linearBtns"
        android:gravity="center">

        <Button
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:id="@+id/cam_btn"
            android:layout_height="40dp"
            android:text="@string/camera"
            android:textSize="15sp"
            android:textStyle="bold"
            android:backgroundTint="@color/black"
            android:gravity="center"
            android:layout_marginEnd="20dp"
            />


        <Button
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:id="@+id/gallery_btn"
            android:layout_height="40dp"
            android:text="@string/gallery"
            android:backgroundTint="@color/black"
            android:textSize="15sp"
            android:textStyle="bold"
            />


    </LinearLayout>


    <ImageView
        android:id="@+id/click_image"
        android:layout_width="350dp"
        android:layout_height="350dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_below="@id/linearBtns"
        android:layout_centerInParent="true"
        android:layout_marginTop="25dp" />
<!--    android:layout_width="350dp"-->
<!--    android:layout_height="370dp"-->
    <Button
        android:id="@+id/saveBtn"
        android:layout_width="110dp"
        android:layout_height="40dp"
        android:layout_centerInParent="true"
        android:backgroundTint="@color/black"
        android:text="@string/save"
        android:layout_above="@id/backBtn"
        android:textSize="15sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/backBtn"
        android:layout_width="110dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:backgroundTint="@color/black"
        android:text="@string/back"
        android:textSize="15sp"
        android:textStyle="bold" />

</RelativeLayout>

